<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_first_major_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/text_first_major_label"
        app:layout_constraintBottom_toTopOf="@+id/text_first_minor_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663" />

    <TextView
        android:id="@+id/text_first_major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_first_major_label"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_first_minor_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/text_first_minor_label"
        app:layout_constraintBottom_toTopOf="@+id/text_second_major_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789" />

    <TextView
        android:id="@+id/text_first_minor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_first_minor_label"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_second_major_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="16dp"
        android:text="@string/text_second_major_label"
        app:layout_constraintBottom_toTopOf="@+id/text_second_minor_label"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/text_second_major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_second_major_label"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_second_minor_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="16dp"
        android:text="@string/text_second_minor_label"
        app:layout_constraintBottom_toTopOf="@+id/button_solunar"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/text_second_minor"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_second_minor_label"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/button_solunar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="getButtonClicked"
        android:text="@string/button_get_solunar_times"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:textColor="#F35654"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_solunar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>